--- a/jewellcart/.settings/org.eclipse.wst.common.component
+++ b/jewellcart/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,9 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main"/>
+        <dependent-module archiveName="jewellcartbackend-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jewellcartbackend/jewellcartbackend">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="jewellcart"/>
         <property name="java-output-path" value="/jewellcart/target/classes"/>
     </wb-module>
